Tela Sobre Finalizada

--- a/ProjetoBackend/Views/Home/Sobre.cshtml
+++ b/ProjetoBackend/Views/Home/Sobre.cshtml
@@ -1,23 +1,48 @@
 ﻿@{
     ViewData["Title"] = "Sobre nossa Empresa";
 }
-<h1 class="text-center mt-md-5">@ViewData["Title"]</h1>
 
-<h4 class="text-center m-5">
-    A StrongCode é uma empresa voltada para o mundo fitness, oferecendo uma linha completa de produtos, com parcerias de academias e marcas de todo mercado fitness para quem busca melhorar sua performance nos seus treinos. Oferecemos os produtos que são desenvolvidos com alta qualidade e tecnologia para proporcionar conforto, segurança e eficiência em cada treino. Contamos com produtos como suplementos, vitaminas, roupas, acessorios,  e os melhores E-book e tambem com suporte de personais de diferentes especialidades.
-    Nosso objetivo é ajudar você a alcançar seus melhores resultados com produtos que se adaptam ao seu nível de treinamento, seja você iniciante ou avançado. Na StrongCode, acreditamos que a força está no esforço, e nossos produtos são o suporte perfeito para sua jornada de evolução física.
-</h4>
+<div class="container">
 
-<h2 class="text-center mt-md-5">Sobre nós Desenvolvedores:</h2>
+    <h1 class="text-center mt-md-5">@ViewData["Title"]</h1>
 
-<div class="row">
+    <h4 class="text-center m-5">
+        A StrongCode é uma empresa voltada para o mundo fitness, oferecendo uma linha completa de produtos, com parcerias de academias e marcas de todo mercado fitness para quem busca melhorar sua performance nos seus treinos. Oferecemos os produtos que são desenvolvidos com alta qualidade e tecnologia para proporcionar conforto, segurança e eficiência em cada treino. Contamos com produtos como suplementos, vitaminas, roupas, acessorios,  e os melhores E-book e tambem com suporte de personais de diferentes especialidades.
+        Nosso objetivo é ajudar você a alcançar seus melhores resultados com produtos que se adaptam ao seu nível de treinamento, seja você iniciante ou avançado. Na StrongCode, acreditamos que a força está no esforço, e nossos produtos são o suporte perfeito para sua jornada de evolução física.
+    </h4>
 
-    <div class="col text-center"><img src="~/images/img_pedro.png" />Pedro Henrique Silva Araujo</div>
+    <h2 class="text-center mt-md-5">Sobre nós Desenvolvedores:</h2>
 
-    <div class="col text-center"><img src="~/images/img_erick.png" />Erick Penazzi</div>
+    <hr>
 
-    <div class="col text-center"><img src="~/images/img_thiago.png" /> <h6>Thiago Candarola Vanucci</h6></div>
+    <div class="row">
 
+        <div class="col text-center">
+            <img src="~/images/img_pedro.png" />
+            <span>Pedro Henrique Silva Araujo </span> <h6>Meu nome e Pedro temho 16 anos sou um jovem proativo faço academia sou um atelta amador de voleibol, já passei uma temporada sendo profisional na base do sesi, sou da cidade de jaú faço desaelvolvimento de sistemas no Senai. Tenho um espirito de liderança e busco sempre uma realidade melhor de vida.       </h6>
+        </div>
+
+
+
+        <div class="col text-center">
+            <img src="~/images/img_erick.png" />  <span>
+                Erick Penazzi <span />
+
+                <h6>Olá meu nome é Erick Penazzi, tenho 17 anos , nasci no interior de São Paulo numa cidade conhecida como Jaú, hoje em dia moro com minha tia e minha vó, estudei do maternal até os 4 ano em uma escola publica no meu bairro, uma amiga da minha mãe conseguiu me matricular no Sesi no 5 ano estou até hoje, comecei o Senai cursando Deselvolvimento de sistemas, sempre fui um cara meio apaixonado por computadores e queria saber mais sobre esse assunto.</h6>
+        </div>
+
+
+
+
+        <div class="col text-center">
+            <img src="~/images/img_thiago.png" />
+            <span>Thiago Candarola Vanucci</span>
+            <h6>
+                Meu nome é Thiago tenho 17 anos, nasci e sou residente de Jaú faço curso tecnico de deselvolvimento de sistemas no Senai, sou atleta de vôlei pela cidade local partico musculação a algum tempo, gosto de praticar esportes variados, sempre gostei de mexer com computador, com a internet em geral, e sou uma pessoa muito interessada na área do emprendedorismo.
+            </h6>
+        </div>
+
+    </div>
 </div>
 
 
