--- a/ProjetoBackend/Views/Clientes/Index.cshtml
+++ b/ProjetoBackend/Views/Clientes/Index.cshtml
@@ -1,73 +1,79 @@
 ﻿@model IEnumerable<ProjetoBackend.Models.Cliente>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Clientes";
 }
+<h1 class="container text-lg-start m-5">Clientes</h1>
 
-<h1>Clientes</h1>
+<div class="container m-5"
 
-<form class="d-flex" role="search">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
-</form>
 
-<button type="button" class="btn btn-primary"
-        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-    Adicionar Cliente
-</button>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CnpjCpf)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Celular)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataNascimento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataCadastro)
-            </th>
+    <form asp-action="Search" class="search-container text-end" method="get">
+    <input type="text" name="nome" placeholder="Buscar cliente..." class="search-input" />
+    <button type="submit" class="search-button"><ion-icon name="search"></ion-icon></button>
+    </form>
 
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+    <a asp-action="Create">
+    <button type="button" class="btn btn-primary"
+            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+        Adicionar Cliente
+    </button>
+    </a>
+
+    <table class="table table-striped">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CnpjCpf)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Celular)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataNascimento)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataCadastro)
-                </td>
-                <td>
-                    <a class="button" asp-action="Edit" asp-route-id="@item.ClienteId">Edit</a>
-                    <a asp-action="Delete" asp-route-id="@item.ClienteId">Delete</a>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nome)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CnpjCpf)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Celular)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DataNascimento)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DataCadastro)
+                </th>
+
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                                                                                                                                                                                                        <tr>
+                                                                                                                                                                                                            <td>
+                        @Html.DisplayFor(modelItem => item.Nome)
+                                                                                                                                                                                                            </td>
+                                                                                                                                                                                                            <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                                                                                                                                                                                                            </td>
+                                                                                                                                                                                                            <td>
+                        @Html.DisplayFor(modelItem => item.CnpjCpf)
+                                                                                                                                                                                                            </td>
+                                                                                                                                                                                                            <td>
+                        @Html.DisplayFor(modelItem => item.Celular)
+                                                                                                                                                                                                            </td>
+                                                                                                                                                                                                            <td>
+                        @Html.DisplayFor(modelItem => item.DataNascimento)
+                                                                                                                                                                                                            </td>
+                                                                                                                                                                                                            <td>
+                        @Html.DisplayFor(modelItem => item.DataCadastro)
+                                                                                                                                                                                                            </td>
+                                                                                                                                                                                                            <td>
+                                                                                                                                                                                                                <a class="button" asp-action="Edit" asp-route-id="@item.ClienteId">Edit</a>
+                                                                                                                                                                                                                <a asp-action="Delete" asp-route-id="@item.ClienteId">Delete</a>
+                                                                                                                                                                                                            </td>
+                                                                                                                                                                                                        </tr>
+            }
+        </tbody>
+    </table>
+</div>
