--- a/ProjetoBackend/wwwroot/css/site.css
+++ b/ProjetoBackend/wwwroot/css/site.css
@@ -13,6 +13,38 @@ html {
     height: 50px;
 }
 
+.search-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+}
+
+.search-input {
+    padding: 10px;
+    border: 2px solid #D9D9D9;
+    border-radius: 15px 0 0 15px;
+    font-size: 16px;
+    outline: none;
+    height: 40px;
+}
+
+.search-button {
+    background-color: #710ABF;
+    border: none;
+    color: #F8F8F8;
+    padding: 0 15px;
+    border-radius: 0 15px 15px 0;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    height: 40px;
+}
+
+    .search-button ion-icon {
+        font-size: 20px;
+    }
+
 
 
 .banner-image {
