--- a/ProjetoBackend/Views/Clientes/Index.cshtml
+++ b/ProjetoBackend/Views/Clientes/Index.cshtml
@@ -1,79 +1,69 @@
 ﻿@model IEnumerable<ProjetoBackend.Models.Cliente>
 
 @{
-    ViewData["Title"] = "Clientes";
+    ViewData["Title"] = "Index";
 }
+
 <h1 class="container text-lg-start m-5">Clientes</h1>
 
-<div class="container m-5"
+<div class="container m-5">
 
+    <div class="row">
+        <div class="col">
+            <a asp-action="Create" class="btn btn-primary">Adicionar Cliente</a>
+        </div>
+        <div class="col">
+            <form asp-action="Search" class="search-container text-end" method="get">
+                <input type="text" name="nome" placeholder="Buscar cliente..." class="search-input" />
+                <button type="submit" class="search-button"><ion-icon name="search"></ion-icon></button>
+            </form>
+        </div>
+    </div>
 
+    <div class="table-responsive mt-5">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Nome)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CnpjCpf)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Celular)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DataNascimento)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DataCadastro)
+                    </th>
 
-    <form asp-action="Search" class="search-container text-end" method="get">
-    <input type="text" name="nome" placeholder="Buscar cliente..." class="search-input" />
-    <button type="submit" class="search-button"><ion-icon name="search"></ion-icon></button>
-    </form>
-
-    <a asp-action="Create">
-    <button type="button" class="btn btn-primary"
-            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-        Adicionar Cliente
-    </button>
-    </a>
-
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Nome)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Email)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.CnpjCpf)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Celular)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DataNascimento)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DataCadastro)
-                </th>
-
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                                                                                                                                                                                                        <tr>
-                                                                                                                                                                                                            <td>
-                        @Html.DisplayFor(modelItem => item.Nome)
-                                                                                                                                                                                                            </td>
-                                                                                                                                                                                                            <td>
-                        @Html.DisplayFor(modelItem => item.Email)
-                                                                                                                                                                                                            </td>
-                                                                                                                                                                                                            <td>
-                        @Html.DisplayFor(modelItem => item.CnpjCpf)
-                                                                                                                                                                                                            </td>
-                                                                                                                                                                                                            <td>
-                        @Html.DisplayFor(modelItem => item.Celular)
-                                                                                                                                                                                                            </td>
-                                                                                                                                                                                                            <td>
-                        @Html.DisplayFor(modelItem => item.DataNascimento)
-                                                                                                                                                                                                            </td>
-                                                                                                                                                                                                            <td>
-                        @Html.DisplayFor(modelItem => item.DataCadastro)
-                                                                                                                                                                                                            </td>
-                                                                                                                                                                                                            <td>
-                                                                                                                                                                                                                <a class="button" asp-action="Edit" asp-route-id="@item.ClienteId">Edit</a>
-                                                                                                                                                                                                                <a asp-action="Delete" asp-route-id="@item.ClienteId">Delete</a>
-                                                                                                                                                                                                            </td>
-                                                                                                                                                                                                        </tr>
-            }
-        </tbody>
-    </table>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => item.Nome)</td>
+                        <td class="text-decoration-none">@item.Email</td>
+                        <td>@Html.DisplayFor(modelItem => item.CnpjCpf)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Celular)</td>
+                        <td>@Html.DisplayFor(modelItem => item.DataNascimento)</td>
+                        <td>@Html.DisplayFor(modelItem => item.DataCadastro) </td>
+                        <td>
+                            <a class="btn btn-sm btn-outline-primary me-2" asp-action="Edit" asp-route-id="@item.ClienteId">Editar</a>
+                            <a class="btn btn-sm btn-outline-danger" asp-action="Delete" asp-route-id="@item.ClienteId">Deletar</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
+
