--- a/ProjetoBackend/Views/Home/Index.cshtml
+++ b/ProjetoBackend/Views/Home/Index.cshtml
@@ -2,6 +2,91 @@
     ViewData["Title"] = "Página Inicial";
 }
 
-<div class="">
-    <img class="w-100" src="~/images/imgprog.png" />
+<div id="carouselExample" class="carousel slide mt-3">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="~/images/imgprog.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="~/images/imgprog.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="~/images/imgprog.png" class="d-block w-100" alt="...">
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
+
+<h3 class="text-center mt-5 mb-5">Produtos mais vendidos</h3>
+
+<div class="row gap-3 ms-3 me-3">
+    <div class="col text-center border border-1 rounded-3 py-5">
+        <img class="img-fluid hImg" src="./Images/creatina-monohidratada-250g-growth-supplements-1.jpg" alt="Creatina" />
+        <h3 class="  ">Creatina 250g</h3>
+        <p><strong>R$ 84,91</strong></p>
+        <button class="btn btn-success">VER PRODUTO</button>
+    </div>
+    <div class="col text-center border border-1 rounded-3 pt-5">
+        <img class="img-fluid hImg" src="./Images/creatina-monohidratada-250g-growth-supplements-1.jpg" alt="Creatina" />
+        <h3>Creatina 250g</h3>
+        <p><strong>R$ 84,91</strong></p>
+        <button class="btn btn-success">VER PRODUTO</button>
+    </div>
+    <div class="col text-center border border-1 rounded-3 pt-5">
+        <img class="img-fluid hImg" src="./Images/creatina-monohidratada-250g-growth-supplements-1.jpg" alt="Creatina" />
+        <h3>Creatina 250g</h3>
+        <p><strong>R$ 84,91</strong></p>
+        <button class="btn btn-success">VER PRODUTO</button>
+    </div>
+    <div class="col text-center border border-1 rounded-3 pt-5">
+        <img class="img-fluid hImg" src="./Images/creatina-monohidratada-250g-growth-supplements-1.jpg" alt="Creatina" />
+        <h3>Creatina 300g</h3>
+        <p><strong>R$ 84,91</strong></p>
+        <button class="btn btn-success">VER PRODUTO</button>
+    </div>
+</div>
+
+<div class="row gap-3 ms-3 me-3">
+    <div class="col text-center border border-1 rounded-3 py-5">
+        <img class="img-fluid hImg" src="./Images/creatina-monohidratada-250g-growth-supplements-1.jpg" alt="Creatina" />
+        <h3>Creatina 250g</h3>
+        <p><strong>R$ 84,91</strong></p>
+        <button class="btn btn-success">VER PRODUTO</button>
+    </div>
+    <div class="col text-center border border-1 rounded-3 pt-5">
+        <img class="img-fluid hImg" src="./Images/creatina-monohidratada-250g-growth-supplements-1.jpg" alt="Creatina" />
+        <h3>Creatina 250g</h3>
+        <p><strong>R$ 84,91</strong></p>
+        <button class="btn btn-success">VER PRODUTO</button>
+    </div>
+    <div class="col text-center border border-1 rounded-3 pt-5">
+        <img class="img-fluid hImg" src="./Images/creatina-monohidratada-250g-growth-supplements-1.jpg" alt="Creatina" />
+        <h3>Creatina 250g</h3>
+        <p><strong>R$ 84,91</strong></p>
+        <button class="btn btn-success">VER PRODUTO</button>
+    </div>
+    <div class="col text-center border border-1 rounded-3 pt-5">
+        <img class="img-fluid hImg" src="./Images/creatina-monohidratada-250g-growth-supplements-1.jpg" alt="Creatina" />
+        <h3>Creatina 250g</h3>
+        <p><strong>R$ 84,91</strong></p>
+        <button class="btn btn-success">VER PRODUTO</button>
+    </div>
+</div>
+
+<div class="row gap-3 ms-3 me-3 ">
+    <div class="text-center col pt-5 ">
+        <img class="img-fluid PImg w-100" src="./Images/emagrecer.jpg" />
+    </div>
+    <div class="text-center col pt-5">
+        <img class="img-fluid PImg w-100  " src="./Images/ganha de massa.jpg" />
+    </div>
+</div>
+
