--- a/ProjetoBackend/Views/Categorias/Create.cshtml
+++ b/ProjetoBackend/Views/Categorias/Create.cshtml
@@ -4,30 +4,38 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Categoria</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+<div class="container pb-5 cliente-form ">
+
+    <h2 class="form-title m-3 mt-5">Criação</h2>
+    <h2 class="form-subtitle">Categorias</h2>
+
+    <form asp-action="Create">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="row">
+            <div class="">
+                <div class="form-group">
+                    <label asp-for="Nome" class="control-label"></label>
+                    <input asp-for="Nome" class="form-control" />
+                    <span asp-validation-for="Nome" class="text-danger"></span>
+                </div>
+
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group col-6">
+                <input type="submit" value="CRIAR" class="btn btn-primary btn-custom" />
             </div>
-        </form>
-    </div>
+            <div class="form-group ">
+                <a asp-action="Index" class="back-link">← voltar</a>
+            </div>
+
+
+
+    </form>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
