--- a/ProjetoBackend/Views/Clientes/Create.cshtml
+++ b/ProjetoBackend/Views/Clientes/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Criação de Cliente";
 }
 
-<div class="container cliente-form">
-    <h2 class="form-title">Criação</h2>
-    <h3 class="form-subtitle">Clientes</h3>
+<div class="container cliente-form ">
+    <h2 class="form-title m-3">Criação</h2>
+    <h2 class="form-subtitle">Clientes</h2>
 
     <form asp-action="Create" class="form-custom">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -40,12 +40,14 @@
         <input type="hidden" asp-for="DataCadastro" />
         <input type="hidden" asp-for="CadastroAtivo" />
 
-        <div class="form-group">
+
+        <div class="form-group col-6">
             <input type="submit" value="CRIAR" class="btn btn-primary btn-custom" />
         </div>
-        <div class="form-group">
+        <div class="form-group ">
             <a asp-action="Index" class="back-link">← voltar</a>
         </div>
+
     </form>
 </div>
 
