--- a/ProjetoBackend/Views/Clientes/Delete.cshtml
+++ b/ProjetoBackend/Views/Clientes/Delete.cshtml
@@ -4,60 +4,95 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Cliente</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CnpjCpf)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CnpjCpf)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Celular)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Celular)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataNascimento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataNascimento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataCadastro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataCadastro)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CadastroAtivo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CadastroAtivo)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ClienteId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="container mt-5">
+
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col">
+            <h1 class="text-center">Excluir</h1>
+
+            <h5 class="text-center mt-2">Tem Certeza que você deseja excluir esse cadastro?</h5>
+            <div>
+                <hr />
+                <dl class="">
+                    <div class="row">
+                        <dt class="col-2">
+                            @Html.DisplayNameFor(model => model.Nome)
+                        </dt>
+                        <dd class="col">
+                            @Html.DisplayFor(model => model.Nome)
+                        </dd>
+                    </div>
+                    <div class="row">
+                        <dt class="col-2">
+                            @Html.DisplayNameFor(model => model.Email)
+                        </dt>
+                        <dd class="col">
+                            @Model.Email
+                        </dd>
+                    </div>
+                    <div class="row">
+                        <dt class="col-2">
+                            @Html.DisplayNameFor(model => model.CnpjCpf)
+                        </dt>
+                        <dd class="col">
+                            @Html.DisplayFor(model => model.CnpjCpf)
+                        </dd>
+                    </div>
+                    <div class="row">
+                        <dt class="col-2">
+                            @Html.DisplayNameFor(model => model.Celular)
+                        </dt>
+                        <dd class="col">
+                            @Html.DisplayFor(model => model.Celular)
+                        </dd>
+                    </div>
+                    <div class="row">
+                        <dt class="col-3">
+                            @Html.DisplayNameFor(model => model.DataNascimento)
+                        </dt>
+                        <dd class="col">
+                            @Html.DisplayFor(model => model.DataNascimento)
+                        </dd>
+                    </div>
+                    <div class="row">
+                        <dt class="col-3">
+                            @Html.DisplayNameFor(model => model.DataCadastro)
+                        </dt>
+                        <dd class="col">
+                            @Html.DisplayFor(model => model.DataCadastro)
+                        </dd>
+                    </div>
+                    <div class="row">
+                        <dt class="col-3">
+                            @Html.DisplayNameFor(model => model.CadastroAtivo)
+                        </dt>
+                        <dd class="col">
+                            @{
+                                if (Model.CadastroAtivo == true)
+                                {
+                                    <span>Sim</span>
+                                }
+                                else
+                                {
+                                    <span>Não</span>
+                                }
+                            }
+                        </dd>
+                    </div>
+                </dl>
+
+                <form asp-action="Delete">
+                    <input type="hidden" asp-for="ClienteId" />
+                    <input type="submit" value="Excluir" class="btn btn-danger col-6" />
+                    <div class="form-group ">
+                        <a asp-action="Index" class="back-link">← voltar</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col-4"></div>
+    </div>
+
 </div>
