--- a/ProjetoBackend/Views/Clientes/Edit.cshtml
+++ b/ProjetoBackend/Views/Clientes/Edit.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
 
-<h4>Cliente</h4>
-<hr />
-<div class="row">
+<div class="container cliente-form">
+    <h1 class="form-title m-3">Editar</h1>
+    <h2 class="form-subtitle">Cliente</h2>
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -39,26 +38,25 @@
                 <span asp-validation-for="DataNascimento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DataCadastro" class="control-label"></label>
-                <input asp-for="DataCadastro" class="form-control" />
-                <span asp-validation-for="DataCadastro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="CadastroAtivo" class="control-label"></label>
-                <input asp-for="CadastroAtivo" class="form-control" />
+                <select asp-for="CadastroAtivo" class="form-control" asp-items="ViewBag.Ativo"></select>
                 <span asp-validation-for="CadastroAtivo" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+
+            <div>
+                <div class="form-group col-6">
+                    <input type="submit" value="Salvar" class="btn btn-primary btn-custom" />
+                </div>
+                <div class="form-group ">
+                    <a asp-action="Index" class="back-link">← voltar</a>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
