--- a/ProjetoBackend/Views/Fornecedores/Create.cshtml
+++ b/ProjetoBackend/Views/Fornecedores/Create.cshtml
@@ -1,46 +1,47 @@
 ﻿@model ProjetoBackend.Models.Fornecedor
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criação de Fornecedores";
 }
 
-<h1>Create</h1>
+<div class="container cliente-form ">
 
-<h4>Fornecedor</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Celular" class="control-label"></label>
-                <input asp-for="Celular" class="form-control" />
-                <span asp-validation-for="Celular" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CnpjCpf" class="control-label"></label>
-                <input asp-for="CnpjCpf" class="form-control" />
-                <span asp-validation-for="CnpjCpf" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+    <h2 class="form-title m-3">Criação</h2>
+    <h2 class="form-subtitle">Fornecedor</h2>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    <form asp-action="Create" class="form-custom">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+
+        <div class="form-group">
+            <label asp-for="Nome" class="control-label"></label>
+            <input asp-for="Nome" class="form-control" />
+            <span asp-validation-for="Nome" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Email" class="control-label"></label>
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Celular" class="control-label"></label>
+            <input asp-for="Celular" class="form-control" />
+            <span asp-validation-for="Celular" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="CnpjCpf" class="control-label"></label>
+            <input asp-for="CnpjCpf" class="form-control" />
+            <span asp-validation-for="CnpjCpf" class="text-danger"></span>
+        </div>
+
+        <div class="form-group col-6">
+            <input type="submit" value="CRIAR" class="btn btn-primary btn-custom" />
+        </div>
+        <div class="form-group ">
+            <a asp-action="Index" class="back-link">← voltar</a>
+        </div>
+
+    </form>
 </div>
 
 @section Scripts {
